# lowcost_datawarehouse

./: .env  README.md  database.db  pyproject.toml
analytics/: query.sql  query_to_csv.sql  sales_per_category.sql  top_products.sql
analytics/result_query/: sales_per_category.csv  top_products.csv
back-end/fake-api/: start.py
backend/: start.py  start_api.py  start_database.py
backend/aws/: client.py
backend/contracts/: schema.py  transactions.py
backend/datasource/: api.py  postgre.py
backend/fakeapi/: products.csv  start.py
backend/tools/sql/db/: database_connection.py  transactions_model.py
frontend/: main.py
frontend/aws/: client.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
