[tool.poetry]
name = "lowcost-datawarehouse"
version = "0.1.0"
description = ""
authors = ["guimarczewski <guimarczewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
faker = "^23.3.0"
randon = "^0.0.6"
requests = "^2.31.0"
pandas = "2.2.0"
pyarrow = "^15.0.1"
boto3 = "^1.34.58"
python-dotenv = "^1.0.1"
taskipy = "^1.12.2"
schedule = "^1.2.1"
streamlit = "^1.32.1"
openpyxl = "^3.1.2"
pydantic = {extras = ["email"], version = "^2.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = """
python3 -m uvicorn backend.fakeapi.start:app --reload
"""
run_dash = """
streamlit run frontend/main.py
"""